# Carrier.Sample

./: .gitignore  README.md  SConstruct  appveyor.yml  carrier.thrift  requirements.txt  setup.py
carrier_sample/: __init__.py  carrier_sample.py  result.py
carrier_sample/TCarrier/carrier/: TCarrier-remote  TCarrier.py  __init__.py  ttypes.py
src/: CMakeLists.txt  Makefile  constant.hpp  main.cpp
src/commander/: base.cpp  base.hpp  commander.cpp  commander.hpp  measure.cpp  measure.hpp
src/config/: glog_config.hpp  sampling_config.cpp  sampling_config.hpp
src/error/: error.cpp  error.hpp
src/gen-cpp/: TCarrier.cpp  TCarrier.h  carrier_constants.cpp  carrier_constants.h  carrier_types.cpp  carrier_types.h
src/global/: global.cpp  global.hpp
src/processer/: processer.cpp  processer.hpp
src/result/: sampling_result.hpp
src/sampler/: bdaqctrl.h  mock_sampler.cpp  mock_sampler.hpp  real_sampler.hpp  sampler.hpp  sampler_factory.cpp  sampler_factory.hpp
src/server/: carrier_handler.cpp  carrier_handler.h
tests/: test_commander.py  test_measure.py  test_result_value.py  test_sampler.py  test_update_result_value.py
